deployment/terraform/modules/ecs_anywhere_ec2_cluster/ecs_optimized_container_instances.tf
data "aws_ssm_parameter" "ecs_al2023_ami" {
  name = "/aws/service/ecs/optimized-ami/amazon-linux-2023/recommended/image_id"
}

variable "ecs_optimized_instance_count" { }

resource "aws_instance" "ecs_optimized_instance" {
  count = var.ecs_optimized_instance_count
  ami           = data.aws_ssm_parameter.ecs_al2023_ami.value  # Use ECS-optimized AL2023 AMI
  instance_type = var.node_instance_type
  subnet_id     = aws_subnet.ecs_anywhere_subnet.id
  security_groups = [aws_security_group.ecs_anywhere_sg.id]
  key_name      = var.key_name
  private_ip    = "10.0.1.${count.index + 20}"

  user_data = templatefile("${path.module}/user_data/ecs_optimized_user_data.tpl", {
    cluster_name    = aws_ecs_cluster.hybrid_cluster.name
  })
  user_data_replace_on_change = true

  tags = {
    Name    = "ecsOptimizedEc2Instance-${count.index}"
    Project = "Danswer"
  }

  root_block_device {
    delete_on_termination = true
  }

  lifecycle {
    ignore_changes = [
      security_groups
    ]
  }

  iam_instance_profile = aws_iam_instance_profile.ecs_cluster_instance_profile.name
}

# Create Instance Profile
resource "aws_iam_instance_profile" "ecs_cluster_instance_profile" {
  name = "ecs-anywhere-instance-profile"
  role = aws_iam_role.ecs_anywhere_mngmt_role.name
}

# We can use Cloud Map and Service Discovery to register these instances

resource "aws_service_discovery_private_dns_namespace" "ecs_namespace" {
  name        = "danswer-services"
  description = "Private namespace for danswer services running on ECS"
  vpc         = aws_vpc.ecs_anywhere_vpc.id
}

resource "aws_service_discovery_service" "front_end_danswer_service" {
  name        = "front-end-danswer-service"
  namespace_id = aws_service_discovery_private_dns_namespace.ecs_namespace.id

  dns_config {
    namespace_id = aws_service_discovery_private_dns_namespace.ecs_namespace.id
    dns_records {
      type = "A"
      ttl  = 60
    }
  }

  health_check_custom_config {
    failure_threshold = 1
  }
}
